# Doozer++ is (C) Copyright 2000-2009 by Iowa State University
# Distributed under the GNU Lesser General Public License 2.1.  (See
# accompanying file COPYING.txt or http://www.gnu.org/copyleft/lesser.txt)
#
# Original Author:
#   Patrick Hartling

AC_REVISION([$Revision$])
AC_INIT([config/general.m4])
AC_CONFIG_AUX_DIR([scripts])

AC_CHECK_PROG([AUTOCONF], [autoconf], [yes],
              [AC_MSG_ERROR([*** Must have Autoconf ***])])
AC_CHECK_PROG([ACLOCAL], [aclocal], [yes],
              [AC_MSG_ERROR([*** Must have aclocal ***])])

AC_OUTPUT(Makefile)
